--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                                         </div>
                                     </a>
                                     <ul class="sub-menu">
+                                        <li><a href="gallery.html">GALLERY</a></li>
                                         <li><a href="news.html">NEWS</a></li>
                                         <li><a href="about.html">ABOUT</a></li>
                                         <!-- <li class="menu_has_children">
