--- a/apply.html
+++ b/apply.html
@@ -192,8 +192,8 @@
                             
 
                             <div class="col-xl-12 form-group text-center">
-                                
-                                <input class="btn--base mt-20" type="submit" value="Submit" id="submit">
+                        <button type="submit" value="Submit" id="submit" class="btn--base mt-20">Get Enrolled Now <i class="fas fa-arrow-right ml-2"></i></button>
+                                <!-- <input class="btn--base mt-20" type="submit" value="Submit" id="submit"> -->
                             </div>
                         </div>
                     </form>
