--- a/index.html
+++ b/index.html
@@ -905,10 +905,11 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="footer-widget">
-                    <form class="subscribe-form">
+                    <form class="subscribe-form" name="contact-form">
                         <label class="subscribe-icon"><i class="las la-envelope"></i></label>
-                        <input type="text" class="form--control" placeholder="Enter Your Email Address">
-                        <button type="submit" class="btn--base">GET ALART</button>
+                        <input type="text" name="Email" class="form--control" placeholder="Enter Your Email Address">
+                        <button type="submit" value="Submit" id="submit" class="btn--base">GET ALERT</button>
+                        
                     </form>
                     <ul class="footer-list">
                         <li><a href="index.html">HOME</a></li>
@@ -936,7 +937,7 @@
 
 
 
-
+<script src="Google Sheet.js"></script>
 <!-- jquery -->
 <script src="assets/js/jquery.js"></script>
 <!-- bootstrap js -->
