--- a/apply.html
+++ b/apply.html
@@ -193,7 +193,7 @@
 
                             <div class="col-xl-12 form-group text-center">
                         <button type="submit" value="Submit" id="submit" class="btn--base mt-20">Get Enrolled Now <i class="fas fa-arrow-right ml-2"></i></button>
-                                <!-- <input class="btn--base mt-20" type="submit" value="Submit" id="submit"> -->
+                                
                             </div>
                         </div>
                     </form>
@@ -314,10 +314,11 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="footer-widget">
-                    <form class="subscribe-form">
+                    <form class="subscribe-form" name="contact-form">
                         <label class="subscribe-icon"><i class="las la-envelope"></i></label>
-                        <input type="text" class="form--control" placeholder="Enter Your Email Address">
-                        <button type="submit" class="btn--base">GET ALART</button>
+                        <input type="text" name="Email" class="form--control" placeholder="Enter Your Email Address">
+                        <button type="submit" value="Submit" id="submit" class="btn--base">GET ALERT</button>
+                        
                     </form>
                     <ul class="footer-list">
                         <li><a href="index.html">HOME</a></li>
