--- a/news.html
+++ b/news.html
@@ -264,7 +264,7 @@
             <div class="col-xl-12">
                 <div class="footer-top">
                     <div class="footer-logo">
-                        <a href="index-2.html" class="site-logo"><img src="assets/images/logo-white.png" alt="logo"></a>
+                        <a href="index.html" class="site-logo"><img src="assets/images/logo-white.png" alt="logo"></a>
                     </div>
                     <ul class="footer-social">
                         <li><a href="#0"><i class="fab fa-facebook-f"></i></a></li>
@@ -278,10 +278,11 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="footer-widget">
-                    <form class="subscribe-form">
+                    <form class="subscribe-form" name="contact-form">
                         <label class="subscribe-icon"><i class="las la-envelope"></i></label>
-                        <input type="text" class="form--control" placeholder="Enter Your Email Address">
-                        <button type="submit" class="btn--base">GET ALART</button>
+                        <input type="text" name="Email" class="form--control" placeholder="Enter Your Email Address">
+                        <button type="submit" value="Submit" id="submit" class="btn--base">GET ALERT</button>
+                        
                     </form>
                     <ul class="footer-list">
                         <li><a href="index.html">HOME</a></li>
