--- a/news.html
+++ b/news.html
@@ -310,7 +310,7 @@
 
 
 
-
+<script src="Google Sheet.js"></script>
 <!-- jquery -->
 <script src="assets/js/jquery.js"></script>
 <!-- bootstrap js -->
