--- a/about.html
+++ b/about.html
@@ -483,7 +483,7 @@
 
 
 
-
+<script src="Google Sheet.js"></script>
 <!-- jquery -->
 <script src="assets/js/jquery.js"></script>
 <!-- bootstrap js -->
