--- a/contact.html
+++ b/contact.html
@@ -358,6 +358,7 @@
 
 
 
+<script src="Google Sheet.js"></script>
 
 <!-- jquery -->
 <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.js"></script>
