--- a/gallery.html
+++ b/gallery.html
@@ -338,7 +338,7 @@
 
 
 
-
+<script src="Google Sheet.js"></script>
 <!-- jquery -->
 <script src="assets/js/jquery.js"></script>
 <!-- bootstrap js -->
