--- a/index.html
+++ b/index.html
@@ -913,6 +913,7 @@
                     </form>
                     <ul class="footer-list">
                         <li><a href="index.html">HOME</a></li>
+                        <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="about.html">ABOUT US</a></li>
                        
                         <li><a href="blog.html">NEWS</a></li>
