--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="about.html">ABOUT US</a></li>
                        
-                        <li><a href="blog.html">NEWS</a></li>
+                        <li><a href="news.html">NEWS</a></li>
                        
                         <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
